--- a/AgregarAlumnos.html
+++ b/AgregarAlumnos.html
@@ -34,7 +34,7 @@
               
             </div>
             <br>
-            <input type="submit" value="Agregar">
+            <button type="button" id="guardarBtn">Guardar</button>
           </form>
             
         </div>
